# Graph-Neural-Network-on-Market-Microstructure

./: .gitignore  README.md
cpp/: CMakeLists.txt  graph_builder.cpp  graph_builder.hpp  main.cpp  model_wrapper.cpp  model_wrapper.hpp  strategy.cpp  strategy.hpp
models/: gnn_model.pt  gnn_model_state.pth  gnn_model_traced.pt
python/: data_parser.py  export.py  generate_data.py  graph_builder.py  model.py  requirements.txt  train.py
